policies/apps/overlays/policy-lab/l7-allow-only-get-root.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: l7-allow-only-get-root
  namespace: policy-lab
spec:
  endpointSelector:
    matchLabels:
      app: server
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: client
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "^/$"

# apiVersion: cilium.io/v2
# kind: CiliumNetworkPolicy
# metadata:
#   name: l7-allow-only-get-root
#   namespace: policy-lab
# spec:
#   endpointSelector:
#     matchLabels:
#       app: server
#   ingress:
#   - fromEndpoints:
#     - matchLabels:
#         app: client
#     toPorts:
#     - ports:
#       - port: "8080"
#         protocol: TCP
#       rules:
#         http:
#         - method: "GET"
#           path: "^/$"
